Fix mobile nav spacing
Fixes #19

--- a/wp-content/themes/mediaplus-2017/assets/css/header.scss
+++ b/wp-content/themes/mediaplus-2017/assets/css/header.scss
@@ -215,9 +215,10 @@
   .header__menu {
     flex: 1;
     font-size: 1.5rem; /* ~24px */
+    line-height: 1;
 
     li + li {
-      margin-top: 1em;
+      margin-top: 1.5em;
     }
 
     a {
